[package]
name = "neighbor"
version = "0.1.4"
authors = ["Jeremy Andrews <jeremy@tag1.com>"]
edition = "2018"
description = "A simple content management system."
homepage = "https://github.com/jeremyandrews/neighbor"
documentation = "https://docs.rs/neighbor/"
repository = "https://github.com/jeremyandrewws/neighbor"
readme = "README.md"
keywords = ["cms", "api", "server", "http", "json"]
license = "Apache-2.0"

[dependencies]
anyhow = "1.0"
actix-web = { version = "3", features = ["rustls"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.7"
log = "0.4"
sitter = "0"
# temporarily here to simplify local developement
#sitter = { path = "../sitter" }
sqlx = { version = "0.4.0", features = [ "postgres", "uuid" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }
